First Refactoring
-Refactored Rune class and hopefully all relevant references. Now supports incomplete builds.
-Moved about button.
-Made more components non opaque.
-Introduced localizations according to system language.