@@ -3,6 +3,7 @@ package net.balintgergely.runebook;
 import java.awt.Color;
 import java.awt.Image;
 import java.awt.image.BufferedImage;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
@@ -14,38 +15,6 @@ import net.balintgergely.util.JSMap;
 
 public class RuneModel {
 	private static final String STAT_MODS_ROUTE = "perk-images/StatMods/";
-	private static final String[] STAT_ICONS = {
-			"StatModsHealthScalingIcon.png",
-			"StatModsArmorIcon.png",
-			"StatModsMagicResIcon.png",
-			"StatModsAttackSpeedIcon.png",
-			"StatModsCDRScalingIcon.png",
-			"StatModsAdaptiveForceIcon.png",
-	};
-	private static final String[] STAT_LOCALE = {
-			"Health",
-			"Armor",
-			"Magic Resistance",
-			"Attack Speed",
-			"Cooldown Reduction",
-			"Adaptive Force",
-	};
-	private static final int[] STAT_IDS = {
-			5001,//0 Health
-			5002,//1 Armor
-			5003,//2 Magic resist
-			5005,//3 Attack Speed
-			5007,//4 CDR
-			5008,//5 Adaptive force
-	};
-	private static final int[] SORTING_ASSIST = {
-			3,//0 Health
-			2,//1 Armor
-			2,//2 Magic resist
-			0,//3 Attack Speed
-			0,//4 CDR
-			1,//5 Adaptive force
-	};
 	private static final int[][] STAT_MODEL = {
 			{5,3,4},
 			{5,1,2},
@@ -54,33 +23,54 @@ public class RuneModel {
 	private static final int STAT_MOD_STATE_COUNT = 27;//3*3*3
 	public static final int PATH_SIZE = 32,KEYSTONE_SIZE = 48,RUNESTONE_SIZE = 32,STAT_MOD_SIZE = 24;
 	private Path[] paths;
-	private Statstone[] statIcons;
+	private Statstone[] statStones;
 	public final Map<Integer,Stone> fullMap;
-	public RuneModel(JSList model,Function<String,BufferedImage> imageProvider){
+	public RuneModel(JSList model,Function<String,BufferedImage> ip,AssetManager mg){
 		paths = new Path[model.size()];
 		HashMap<Integer,Stone> fm = new HashMap<>();
-		for(int i = 0;i < paths.length;i++){
+		for(byte i = 0;i < paths.length;i++){
 			JSMap pathModel = model.getJSMap(i);
-			BufferedImage img = imageProvider.apply(pathModel.getString("icon"));
-			Path pt = new Path(i,this,pathModel,imageProvider,img,AssetManager.averagePixels(img),fm);
+			BufferedImage img = ip.apply(pathModel.getString("icon"));
+			Path pt = new Path(i,this,pathModel,ip,img,AssetManager.averagePixels(img),fm);
 			paths[i] = pt;
 			fm.put(pt.id, pt);
 		}
-		statIcons = new Statstone[STAT_ICONS.length];
-		for(int i = 0;i < STAT_ICONS.length;i++){
-			BufferedImage img = imageProvider.apply(STAT_MODS_ROUTE+STAT_ICONS[i]);
-			int id = STAT_IDS[i];
-			Statstone sts = new Statstone(this, resize(STAT_MOD_SIZE,img), STAT_LOCALE[i], AssetManager.averagePixels(img), id, SORTING_ASSIST[i]);
-			statIcons[i] = sts;
-			fm.put(id, sts);
+		statStones = new Statstone[]{//Icon image			Name		Id	SA	MIN	MAX
+				sts(0, ip, "StatModsHealthScalingIcon.png",	mg.z.getString("statHp"),	5001, 2, 2, 0),
+				sts(1, ip, "StatModsArmorIcon.png",			mg.z.getString("statAr"),	5002, 1, 2, 1),
+				sts(2, ip, "StatModsMagicResIcon.png",		mg.z.getString("statMr"),	5003, 1, 2, 2),
+				sts(3, ip, "StatModsAttackSpeedIcon.png",	mg.z.getString("statAr"),	5005, 0, 0, 1),
+				sts(4, ip, "StatModsCDRScalingIcon.png",	mg.z.getString("statCd"),	5007, 0, 0, 2),
+				sts(5, ip, "StatModsAdaptiveForceIcon.png",	mg.z.getString("statAf"),	5008, 0, 1, 0),
+		};
+		for(Statstone st : statStones){
+			fm.put(st.id, st);
 		}
-		fullMap = Map.copyOf(fm);
+		fullMap = Collections.unmodifiableMap(fm);//Faster.
+	}
+	private Statstone sts(int statId,
+			Function<String,BufferedImage> imageProvider,String imageName,String name,int id,int leastSlot,int mostSlot,int index){
+		BufferedImage image = imageProvider.apply(STAT_MODS_ROUTE+imageName);
+		return new Statstone(
+				statId,
+				this,
+				resize(STAT_MOD_SIZE,image),
+				AssetManager.averagePixels(image),
+				name, id, leastSlot, mostSlot, index);
 	}
 	public int getPathCount(){
 		return paths.length;
 	}
 	public Path getPath(int path){
 		return paths[path];
+	}
+	public Path pathForName(String name){
+		for(Path pt : paths){
+			if(pt.getDescription().equalsIgnoreCase(name)){
+				return pt;
+			}
+		}
+		return null;
 	}
 	public int getStatSlotCount(){
 		return STAT_MODEL.length;
@@ -92,20 +82,22 @@ public class RuneModel {
 		return STAT_MOD_STATE_COUNT;
 	}
 	public Statstone getStatstone(int slot,int index){
-		return statIcons[STAT_MODEL[slot][index]];
+		return statStones[STAT_MODEL[slot][index]];
 	}
 	public static abstract class Stone extends ImageIcon{
 		private static final long serialVersionUID = 1L;
 		public final int id;
-		private Stone(Image image,String name,int id){
+		public final byte order;
+		private Stone(byte order,Image image,String name,int id){
 			super(image,name);
 			this.id = id;
+			this.order = order;
 		}
 	}
 	public static class Path extends Stone{
-		public final int order;
 		public final RuneModel model;
 		public final Color color;
+		public final String key;
 		public int getSlotCount(){
 			return slots.length;
 		}
@@ -120,16 +112,16 @@ public class RuneModel {
 		}
 		private Runestone[][] slots;
 		private static final long serialVersionUID = 1L;
-		public Path(int order,RuneModel rm,JSMap model,Function<String,BufferedImage> imageProvider,Image img,Color color,Map<Integer,Stone> m){
-			super(img,model.getString("name"),model.getInt("id"));
-			this.order = order;
+		public Path(byte order,RuneModel rm,JSMap model,Function<String,BufferedImage> imageProvider,Image img,Color color,Map<Integer,Stone> m){
+			super(order,img,model.getString("name"),model.getInt("id"));
 			this.model = rm;
+			this.key = model.getString("key");
 			JSList sl = model.getJSList("slots");
 			slots = new Runestone[sl.size()][];
 			for(int i = 0;i < slots.length;i++){
 				JSList slist = sl.getJSMap(i).getJSList("runes");
 				Runestone[] sb = new Runestone[slist.size()];
-				for(int n = 0;n < sb.length;n++){
+				for(byte n = 0;n < sb.length;n++){
 					JSMap stone = slist.getJSMap(n);
 					Runestone rs = new Runestone(n,this,
 resize(i == 0 ? KEYSTONE_SIZE : RUNESTONE_SIZE,imageProvider.apply(stone.getString("icon"))),stone.getString("name"),stone.getInt("id"),i);
@@ -145,10 +137,8 @@ resize(i == 0 ? KEYSTONE_SIZE : RUNESTONE_SIZE,imageProvider.apply(stone.getStri
 		private static final long serialVersionUID = 1L;
 		public final Path path;
 		public final int slot;
-		public final int index;
-		private Runestone(int index,Path path,Image image,String name,int id,int slot){
-			super(image,name,id);
-			this.index = index;
+		private Runestone(byte order,Path path,Image image,String name,int id,int slot){
+			super(order,image,name,id);
 			this.path = path;
 			this.slot = slot;
 		}
@@ -157,12 +147,16 @@ resize(i == 0 ? KEYSTONE_SIZE : RUNESTONE_SIZE,imageProvider.apply(stone.getStri
 		private static final long serialVersionUID = 1L;
 		public final RuneModel model;
 		public final Color color;
-		public final int sortingAssist;
-		private Statstone(RuneModel model,Image image,String name,Color color,int id,int sortingAssist){
-			super(image,name,id);
+		public final byte minSlot;
+		public final byte maxSlot;
+		public final byte statId;
+		private Statstone(int statId,RuneModel model,Image image,Color color,String name,int id,int leastSlot,int mostSlot,int index){
+			super((byte)index,image,name,id);
 			this.color = color;
 			this.model = model;
-			this.sortingAssist = sortingAssist;
+			this.minSlot = (byte)leastSlot;
+			this.maxSlot = (byte)mostSlot;
+			this.statId = (byte)statId;
 		}
 		public int indexOfInSlot(int slot){
 			switch(id){
